--- a/todolistproject/src/main/resources/application.properties
+++ b/todolistproject/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=create
+#spring.batch.job.enabled=false
